# XEnigine

./: .gitignore  Build.bat  CMakeLists.txt  XEngine.sln  premake5.lua
Cache/: RFullScreenQuadVS.cso  RenderTransmittanceLutCS.cso  XLightPassPS.cso  XLightPassVS.cso  XSSRPassPS.cso  XSSRPassVS.cso  XShadowMaskPassPS.cso  graphics_pso_cache.cache
MaterialShaders/: DefaultMaterials.hlsl  Material.hlsl
OtherSave/: XEngine.cpp  XEngine1.cpp
Source/: CrateApp.cpp  FrameResource.cpp  FrameResource.h  ShadowDepthShader.hlsl  ShadowProjectionShader.hlsl  main.cpp  project_xengine.vcxproj  project_xengine.vcxproj.filters  xtrack_new.h
Source/Core/: AlignmentTemplates.h
Source/Editor/: EditorUI.cpp
Source/File/: LoadDDSTexture.h  LoadTGATexture.h
Source/Shaders/: BasePassPixelShader.hlsl  BasePassPixelShader_1.hlsl  BasePassVertexShader.hlsl  Common.hlsl  Default.hlsl  DeferredLightPixelShaders.hlsl  DeferredLightVertexShaders.hlsl  DepthOnlyVertexShader.hlsl  FastMath.hlsl  GPUCulling.hlsl  HZB.hlsl  LocalVertexFactory.hlsl  PixelShaderOutputCommon.hlsl  ReflectionEnvironmentShader.hlsl  SVOBuildCS.hlsl  SVOConeTracing.hlsl  SVOGICommon.hlsl  SVOGINodeCountBuffer.hlsl  SVOInjectLight.hlsl  ScreenSpaceReflection.hlsl  ShadowCommandBuild.hlsl  ShadowDepthShader.hlsl  ShadowMaskGenCS.hlsl  ShadowPerTileProjectionPS.hlsl  ShadowPerTileProjectionVS.hlsl  ShadowProjectionShader.hlsl  ShadowProjection_Old.hlsl  SkyAtmosphere.hlsl  ToneMapping.hlsl  UIBackend.hlsl  VSMPagetableGen.hlsl  VSMTileMaskCS.hlsl  VSMTileMaskClearCS.hlsl  VoxelizationPS.hlsl  VoxelizationVS.hlsl  fullScreen.hlsl  shaders.hlsl
Source/UnitTest/: GeometryGenerator.cpp  GeometryGenerator.h  ResouceLoaderTest - 副本.h  (+4 more)
TTT2017/: TTT2017.sln
(+233 files in other folders)
